chore(release): finalize production build (mobile ux, assets, hygiene)

--- a/planning/resume_source/custom.tex
+++ b/planning/resume_source/custom.tex
@@ -88,8 +88,8 @@
     \hfill
     \begin{minipage}[c]{0.25\textwidth}
         \raggedleft
-        \IfFileExists{profpic.jpeg}{
-            \includegraphics[width=3cm, keepaspectratio]{profpic.jpeg}
+        \IfFileExists{profilepic.jpeg}{
+            \includegraphics[width=3cm, keepaspectratio]{profilepic.jpeg}
         }{
             \fcolorbox{gray}{white}{\parbox[c][3.5cm][c]{3cm}{\centering\tiny Photo Not Found}}
         }
